docs/7.52/md/abenabap_generic_program.md
---
title: "ABAP Source Code"
description: |
  The statements -   GENERATE SUBROUTINE POOL(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapgenerate_subroutine_pool.htm), -   READ REPORT(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_report.htm), -   SYNTAX-CHECK(https://help.sap.com/doc/abapdocu_752_inde
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_generic_program.htm"
abapFile: "abenabap_generic_program.htm"
keywords: ["insert", "do", "if", "case", "try", "class", "abenabap", "generic", "program"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [program editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_editing.htm) →  [Dynamic Program Editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_dynamic.htm) → 

ABAP Source Code

The statements

-   [GENERATE SUBROUTINE POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapgenerate_subroutine_pool.htm),

-   [READ REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_report.htm),

-   [SYNTAX-CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsyntax-check_for_itab.htm),

-   [INSERT REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm),

for creating and editing [ABAP source ode](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_source_code_glosry.htm "Glossary Entry") dynamically are released for use in application programming. Some additions of the released statements and certain statements are intended for internal system use only and must not be used in application programs.

Notes

-   The statements listed here can be used in application programs in exceptional cases only. ABAP provides many other means of dynamic programming, which generally make creating source code dynamically unnecessary (see the list in [dynamic program processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_dynamic.htm)).

-   If source code needs to be displayed or edited in SAP GUI interactively, the class CL\_GUI\_SOURCEEDIT can be used, which calls the ABAP Editor control.

Continue
[GENERATE SUBROUTINE POOL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapgenerate_subroutine_pool.htm)
[READ REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_report.htm)
[SYNTAX-CHECK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsyntax-check_for_itab.htm)
[INSERT REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm)
![Example](exa.gif "Example") [Program Generation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_generation_abexa.htm)
[Internal Statements for Source Code Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengeneric_internal.htm)