docs/7.57/md/abenabap_generic_program.md
---
title: "ABAP Source Code"
description: |
  The statements -   GENERATE SUBROUTINE POOL(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapgenerate_subroutine_pool.htm), -   READ REPORT(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapread_report.htm), -   SYNTAX-CHECK(https://help.sap.com/doc/abapdocu_757_inde
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_generic_program.htm"
abapFile: "abenabap_generic_program.htm"
keywords: ["insert", "do", "if", "case", "try", "class", "abenabap", "generic", "program"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Program Maintenance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprogram_editing.htm) →  [Dynamic Program Development](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_dynamic.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Source Code, ABENABAP_GENERIC_PROGRAM, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0
D%0ASuggestion for improvement:)

ABAP Source Code

The statements

-   [GENERATE SUBROUTINE POOL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapgenerate_subroutine_pool.htm),
-   [READ REPORT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapread_report.htm),
-   [SYNTAX-CHECK](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsyntax-check_for_itab.htm),
-   [INSERT REPORT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapinsert_report.htm),

for creating and editing [ABAP source code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_source_code_glosry.htm "Glossary Entry") dynamically are released for use in application programming. Some additions of the released statements and certain statements are intended for internal system use only and must not be used in application programs.

Hints

-   The statements described here can be used in application programs in exceptional cases only. ABAP provides many other means of dynamic programming, which generally make creating source code dynamically unnecessary (see the list in [dynamic program processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_dynamic.htm)).
-   To display or edit source code in SAP GUI interactively, the class CL\_GUI\_SOURCEEDIT can, for example, be used. This class calls the ABAP Editor control.

Continue
[GENERATE SUBROUTINE POOL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapgenerate_subroutine_pool.htm)
[READ REPORT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapread_report.htm)
[SYNTAX-CHECK](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsyntax-check_for_itab.htm)
[INSERT REPORT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapinsert_report.htm)
[Internal Statements for Source Code Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengeneric_internal.htm)